[gd_scene load_steps=4 format=2]

[ext_resource path="res://_modular/DKamera/dkamera_noise.tres" type="OpenSimplexNoise" id=1]
[ext_resource path="res://_modular/DKamera/DKamera.gd" type="Script" id=3]

[sub_resource type="NoiseTexture" id=1]
noise = ExtResource( 1 )

[node name="DKamera" type="Camera2D"]
position = Vector2( 320, 180 )
rotation = 3.14159
rotating = true
current = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_drag_margin = true
script = ExtResource( 3 )

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 3

[node name="TestToggle" type="CheckBox" parent="UILayer"]
margin_left = 6.0
margin_top = 24.0
margin_right = 59.0
margin_bottom = 48.0
text = "test"

[node name="TestHud" type="Node2D" parent="UILayer"]

[node name="AddTraumaBtn" type="Button" parent="UILayer/TestHud"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 157.0
margin_right = 88.0
margin_bottom = 177.0
text = "tresi"

[node name="ResetViewBtn" type="Button" parent="UILayer/TestHud"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 26.0
margin_right = 176.0
margin_bottom = 46.0
text = "resetiraj pogled"

[node name="ShakeBar" type="ProgressBar" parent="UILayer/TestHud"]
modulate = Color( 1, 0, 0, 1 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_top = 338.0
margin_right = 610.0
margin_bottom = 352.0
max_value = 1.0

[node name="TraumaBar" type="ProgressBar" parent="UILayer/TestHud"]
modulate = Color( 0.12549, 1, 0, 1 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_top = 322.0
margin_right = 611.0
margin_bottom = 336.0
max_value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZoomSlider" type="VSlider" parent="UILayer/TestHud"]
visible = false
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 57.0
margin_right = 19.0
margin_bottom = 312.0
max_value = 1.0
step = 0.1
value = 1.0

[node name="TimeSlider" type="VSlider" parent="UILayer/TestHud"]
anchor_bottom = 1.0
margin_left = 635.0
margin_top = 6.0
margin_right = 651.0
margin_bottom = 352.0
rect_scale = Vector2( -1, 1 )
max_value = 2.0
step = 0.1
value = 1.0

[node name="NoiseControl" type="Control" parent="UILayer/TestHud"]
margin_left = 1.0
margin_top = 172.0
margin_right = 95.0
margin_bottom = 356.0

[node name="NoiseVisual" type="TextureRect" parent="UILayer/TestHud/NoiseControl"]
margin_left = 7.0
margin_top = 13.0
margin_right = 87.0
margin_bottom = 93.0
texture = SubResource( 1 )

[node name="Seed" type="HSlider" parent="UILayer/TestHud/NoiseControl"]
margin_left = 8.0
margin_top = 99.0
margin_right = 87.0
margin_bottom = 115.0
hint_tooltip = "Seed"

[node name="Octaves" type="HSlider" parent="UILayer/TestHud/NoiseControl"]
margin_left = 8.0
margin_top = 114.0
margin_right = 87.0
margin_bottom = 130.0
hint_tooltip = "Octaves"
min_value = 1.0
max_value = 9.0
value = 3.0

[node name="Period" type="HSlider" parent="UILayer/TestHud/NoiseControl"]
margin_left = 8.0
margin_top = 131.0
margin_right = 87.0
margin_bottom = 147.0
hint_tooltip = "Period"
min_value = 0.1
max_value = 256.0
step = 0.1
value = 64.0

[node name="Persistence" type="HSlider" parent="UILayer/TestHud/NoiseControl"]
margin_left = 8.0
margin_top = 148.0
margin_right = 87.0
margin_bottom = 164.0
hint_tooltip = "Persistance"
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.5

[node name="Lacunarity" type="HSlider" parent="UILayer/TestHud/NoiseControl"]
margin_left = 8.0
margin_top = 165.0
margin_right = 87.0
margin_bottom = 181.0
hint_tooltip = "Lacunarity"
min_value = 0.01
max_value = 4.0
step = 0.01
value = 2.0

[node name="ShakeToggle" type="CheckBox" parent="UILayer/TestHud"]
margin_left = 4.0
margin_top = 128.0
margin_right = 57.0
margin_bottom = 152.0
text = "in gejm"

[connection signal="mouse_entered" from="UILayer/TestToggle" to="." method="_on_CheckBox_mouse_entered"]
[connection signal="mouse_exited" from="UILayer/TestToggle" to="." method="_on_CheckBox_mouse_exited"]
[connection signal="toggled" from="UILayer/TestToggle" to="." method="_on_CheckBox_toggled"]
[connection signal="mouse_entered" from="UILayer/TestHud/AddTraumaBtn" to="." method="_on_AddTraumaBtn_mouse_entered"]
[connection signal="mouse_exited" from="UILayer/TestHud/AddTraumaBtn" to="." method="_on_AddTraumaBtn_mouse_exited"]
[connection signal="pressed" from="UILayer/TestHud/AddTraumaBtn" to="." method="_on_AddTraumaBtn_pressed"]
[connection signal="mouse_entered" from="UILayer/TestHud/ResetViewBtn" to="." method="_on_ResetView_mouse_entered"]
[connection signal="mouse_exited" from="UILayer/TestHud/ResetViewBtn" to="." method="_on_ResetView_mouse_exited"]
[connection signal="pressed" from="UILayer/TestHud/ResetViewBtn" to="." method="_on_ResetView_pressed"]
[connection signal="mouse_entered" from="UILayer/TestHud/ZoomSlider" to="." method="_on_ZoomSlider_mouse_entered"]
[connection signal="mouse_exited" from="UILayer/TestHud/ZoomSlider" to="." method="_on_ZoomSlider_mouse_exited"]
[connection signal="value_changed" from="UILayer/TestHud/ZoomSlider" to="." method="_on_ZoomSlider_value_changed"]
[connection signal="mouse_entered" from="UILayer/TestHud/TimeSlider" to="." method="_on_TimeSlider_mouse_entered"]
[connection signal="mouse_exited" from="UILayer/TestHud/TimeSlider" to="." method="_on_TimeSlider_mouse_exited"]
[connection signal="value_changed" from="UILayer/TestHud/TimeSlider" to="." method="_on_TimeSlider_value_changed"]
[connection signal="mouse_entered" from="UILayer/TestHud/NoiseControl" to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="UILayer/TestHud/NoiseControl" to="." method="_on_Control_mouse_exited"]
[connection signal="mouse_entered" from="UILayer/TestHud/NoiseControl/Seed" to="." method="_on_SeedSlider_mouse_entered"]
[connection signal="mouse_exited" from="UILayer/TestHud/NoiseControl/Seed" to="." method="_on_SeedSlider_mouse_exited"]
[connection signal="value_changed" from="UILayer/TestHud/NoiseControl/Seed" to="." method="_on_Seed_value_changed"]
[connection signal="mouse_entered" from="UILayer/TestHud/NoiseControl/Octaves" to="." method="_on_Octaves_mouse_entered"]
[connection signal="mouse_exited" from="UILayer/TestHud/NoiseControl/Octaves" to="." method="_on_Octaves_mouse_exited"]
[connection signal="value_changed" from="UILayer/TestHud/NoiseControl/Octaves" to="." method="_on_Octaves_value_changed"]
[connection signal="mouse_entered" from="UILayer/TestHud/NoiseControl/Period" to="." method="_on_Period_mouse_entered"]
[connection signal="mouse_exited" from="UILayer/TestHud/NoiseControl/Period" to="." method="_on_Period_mouse_exited"]
[connection signal="value_changed" from="UILayer/TestHud/NoiseControl/Period" to="." method="_on_Period_value_changed"]
[connection signal="mouse_entered" from="UILayer/TestHud/NoiseControl/Persistence" to="." method="_on_Persistance_mouse_entered"]
[connection signal="mouse_exited" from="UILayer/TestHud/NoiseControl/Persistence" to="." method="_on_Persistance_mouse_exited"]
[connection signal="value_changed" from="UILayer/TestHud/NoiseControl/Persistence" to="." method="_on_Persistence_value_changed"]
[connection signal="mouse_entered" from="UILayer/TestHud/NoiseControl/Lacunarity" to="." method="_on_Lacunarity_mouse_entered"]
[connection signal="mouse_exited" from="UILayer/TestHud/NoiseControl/Lacunarity" to="." method="_on_Lacunarity_mouse_exited"]
[connection signal="value_changed" from="UILayer/TestHud/NoiseControl/Lacunarity" to="." method="_on_Lacunarity_value_changed"]
[connection signal="mouse_entered" from="UILayer/TestHud/ShakeToggle" to="." method="_on_CheckBox_mouse_entered"]
[connection signal="mouse_exited" from="UILayer/TestHud/ShakeToggle" to="." method="_on_CheckBox_mouse_exited"]
[connection signal="toggled" from="UILayer/TestHud/ShakeToggle" to="." method="_on_ShakeToggle_toggled"]
